# Learning-Adaptivity

./: .gitignore  CMakeLists.txt
at_home/BigCoffeeCup/: 0.pcd  1.pcd  11.pcd  12.pcd  13.pcd  14.pcd  19.pcd  20.pcd  21.pcd  22.pcd  26.pcd  27.pcd  28.pcd  29.pcd  30.pcd  33.pcd  34.pcd  35.pcd  36.pcd  37.pcd  38.pcd  39.pcd  40.pcd  42.pcd  44.pcd  45.pcd  46.pcd  47.pcd  5.pcd  50.pcd  51.pcd  52.pcd  53.pcd  54.pcd  55.pcd  56.pcd  57.pcd  58.pcd  7.pcd  8.pcd
at_home/MuscleBox/: 0.pcd  1.pcd  10.pcd  11.pcd  13.pcd  16.pcd  18.pcd  19.pcd  21.pcd  22.pcd  24.pcd  25.pcd  26.pcd  27.pcd  28.pcd  29.pcd  30.pcd  31.pcd  33.pcd  34.pcd  35.pcd  36.pcd  37.pcd  4.pcd  40.pcd  42.pcd  43.pcd  44.pcd  46.pcd  47.pcd  5.pcd  53.pcd  6.pcd  7.pcd  8.pcd
at_home/Pringles/: 0.pcd  1.pcd  10.pcd  11.pcd  13.pcd  14.pcd  15.pcd  17.pcd  2.pcd  20.pcd  23.pcd  24.pcd  26.pcd  27.pcd  3.pcd  31.pcd  34.pcd  35.pcd  36.pcd  37.pcd  4.pcd  40.pcd  41.pcd  42.pcd  43.pcd  44.pcd  45.pcd  46.pcd  47.pcd  48.pcd  49.pcd  50.pcd  51.pcd  53.pcd  6.pcd  7.pcd  8.pcd  9.pcd
at_home/SmallKetchupBottle/: 0.pcd  1.pcd  11.pcd  14.pcd  15.pcd  18.pcd  2.pcd  20.pcd  21.pcd  22.pcd  23.pcd  26.pcd  27.pcd  28.pcd  3.pcd  31.pcd  32.pcd  33.pcd  34.pcd  35.pcd  36.pcd  37.pcd  39.pcd  4.pcd  41.pcd  42.pcd  43.pcd  44.pcd  46.pcd  48.pcd  5.pcd  50.pcd  53.pcd  7.pcd  9.pcd
features/: 5.pcd
features/BigCoffeeCup/: 1.pcd
features/MuscleBox/: 1.pcd
src/: divide_files.py  main.cpp  trainer.py
testFeatures/: 12.csv  2.csv  BigCoffeeCup_3.csv  MuscleBox_5.csv  Pringles_4.csv
(+90 files in other folders)
